DT-2559 Remove query builder pattern from UserService and StaffService (#1040)
* DT-2559 Remove query builder pattern from UserService and StaffService

* DT-2559 Remove query builder pattern from UserService and StaffService

* DT-2559 Remove query builder pattern from UserService and StaffService